Agregamos un Filtro de NFC como recurso xml en una nueva carpeta

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="zombie.deliziusz.deliziusznfc">
 
     <!-- AGREGANDO PERMISOS EN EL MANIFIESTO-->
+    <uses-permission android:name="android.permission.NFC"/>
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,9 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.category.NDEF_DISCOVERED"/>
+                <action android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
